2008-02-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs: 
	Draw the focus row again, make it really sexy by merging it into the
	selection if it borders one

	* src/Core/Hyena.Gui/Hyena.Gui/CairoExtensions.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListViewGraphics.cs: Support drawing
	selections/rounded rectangles that fall through to others

2008-02-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Model.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Windowing.cs:
	Split ListView.cs into several partial class implementations so
	maintaining and reading the code is a lot easier since this is a huge
	class; lots of cosmetic cleanup

	* src/Core/Hyena.Gui/Hyena.Data.Gui/RowActivatedHandler.cs: Moved to
	its own file from ListView.cs

2008-02-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	Implement OnDragSourceSet; the ListView will call this when it's okay
	for drag sources to be enabled

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Added a virtual
	OnDragSourceSet method that the view will call when drag and drop from
	the widget is allowed (i.e. when not playing with the header); remove
	drag sources when the header is pressed, add them back when released

2008-02-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Only add
	the separator to the add to playlist menu if there are actually playlists
	that can be added to; remove the playlist map and pass the source through
	the .Data property of the object

2008-02-07  Gabriel Burt  <gabriel.burt@gmail.com>
