@@ -1,5 +1,10 @@
 2008-02-07  Aaron Bockover  <abock@gnome.org>
 
+	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
+	Support single row selection toggling when CTRL+Space is pressed
+
+2008-02-07  Aaron Bockover  <abock@gnome.org>
+
 	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs: 
 	Draw the focus row again, make it really sexy by merging it into the
 	selection if it borders one
